--- a/Code-Webshop/style.css
+++ b/Code-Webshop/style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    color: #333;
+    color: #e20000;
 }
 
 header {
